--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,9 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/testDirective/testDirective.directive.js"></script>
+      <script src="app/testFilter/testFilter.filter.js"></script>
+      <script src="app/testService/testService.service.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
